--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,3 +23,16 @@ body {
   font-family: 'Ubuntu', sans-serif;
   min-height: 100vh;
 }
+
+.anim-pulsate {
+  animation: pulse 1.25s infinite alternate;
+}
+
+@keyframes pulse {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
